--- a/index.html
+++ b/index.html
@@ -28,52 +28,46 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse nav" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class=><a href="#">CREATE YOUR OWN<span class="sr-only">(current)</span></a></li>
+            <li class="contact"><a href="#">CONTACT</a></li>
+
+          <li><a href="#">CREATE YOUR OWN<span class="sr-only">(current)</span></a></li>
           <li><a href="#">DRAPERY</a></li>
           <li><a href="#">SHADES</a></li>
           <li><a href="#">PILLOWS</a></li>
           <li><a href="#">BEDDING</a></li>
           <li><a href="#">OUTDOOR</a></li>
           <li><a href="#">FABRICS</a></li>
-
-
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
         </ul>
-        <form class="navbar-form navbar-left">
+        <form class="navbar-form navbar-right">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" id="searchBtn" placeholder="Filter by room">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 </header>
 
+<div class="ship-strip">
+  <p>FREE AND FAST SHIPPING. CUSTOM FURNISHING IN JUST 2 WEEKS.</p>
+</div>
+<div class="strip">
+</div>
+<div>
+    <img src="img/main_banner_2x.jpeg" class=" hero center-block" alt="Responsive image">
+</div>
+
+<div id="mainContainer">
+  <div id="products"></div>
+</div>
+
+<!-- The Modal -->
+<!-- <div id="myModal" class="modal">
+    <span class="close">×</span>
+    <img class="modal-content" id="myImg">
+    <div id="caption"></div>
+  </div> -->
 
 <body>
   
