--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/main.css">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
 </head>
 
 <header>
@@ -37,12 +42,14 @@
           <li><a href="#">BEDDING</a></li>
           <li><a href="#">OUTDOOR</a></li>
           <li><a href="#">FABRICS</a></li>
+          <li id="wish"><a href="#">WISH LIST</a></li>
+
         </ul>
         <form class="navbar-form navbar-right">
           <div class="form-group">
-            <input type="text" class="form-control" id="searchBtn" placeholder="Filter by room">
+            <input type="text" class="form-control" id="input" placeholder="Filter by room">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button id="searchBtn" type="submit" class="btn btn-default">Submit</button>
         </form>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -58,20 +65,39 @@
     <img src="img/main_banner_2x.jpeg" class=" hero center-block" alt="Responsive image">
 </div>
 
-<div id="mainContainer">
-  <div id="products"></div>
-</div>
-
-<!-- The Modal -->
-<!-- <div id="myModal" class="modal">
-    <span class="close">×</span>
-    <img class="modal-content" id="myImg">
-    <div id="caption"></div>
-  </div> -->
 
 <body>
+  <div id="mainContainer">
+    <div id="products"></div>
+  </div>
   
   <script src="dist/bundle.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
+<footer>
+    <div class="ship-strip">
+        <p>HAVE QUESTIONS?</p>
+    </div>
+    <img src="img/loom.svg" class=" image img-responsive center-block" alt="Responsive image">
+    <section id="contact" class="content-section text-center">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+                  <a class="social" href="https://pinterest.com/loomdecor/" class="header-links"><i class="fab fa-pinterest-square fa-3x"></i></a>
+                  <a class="social" href="https://www.facebook.com/LoomDecor" class="header-links"><i class="fab fa-facebook fa-3x"></i></a>
+                  <a class="social" href="https://www.instagram.com/loomdecor/" class="header-links"><i class="fab fa-instagram fa-3x"></i></a>
+                  <a class="social" href="https://www.houzz.com/pro/loomdecor/loom-decor" class="header-links"><i class="fab fa-houzz fa-3x"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" class="form-control" id="searchBtn" placeholder="Sign Up...">
+        </div>
+        <button type="submit" class="btn btn-default">Sign Up</button>
+      </form>
+</footer>
 </html>
