added more responsiveness

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <p>HAVE QUESTIONS?</p>
     </div>
     <img src="img/loom.svg" class=" image img-responsive center-block" alt="Responsive image">
-    <section id="contact" class="content-section text-center">
+    <section id="contact" class="content-section text-center center-block">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="image img-responsive center-block">
                   <a class="social" href="https://pinterest.com/loomdecor/" class="header-links"><i class="fab fa-pinterest-square fa-3x"></i></a>
                   <a class="social" href="https://www.facebook.com/LoomDecor" class="header-links"><i class="fab fa-facebook fa-3x"></i></a>
                   <a class="social" href="https://www.instagram.com/loomdecor/" class="header-links"><i class="fab fa-instagram fa-3x"></i></a>
@@ -92,8 +92,8 @@
           </div>
         </div>
       </section>
-    <form class="navbar-form navbar-right">
-        <div class="form-group">
+    <form class="image img-responsive center-block">
+        <div class="form-group ">
           <input type="text" class="form-control" id="searchBtn" placeholder="Sign Up...">
         </div>
         <button type="submit" class="btn btn-default">Sign Up</button>
