--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<header>
+<header class="static">
     <img src="img/loom.svg" class=" image img-responsive center-block" alt="Responsive image">
   <nav class="navbar navbar-default nav">
     <div class="container-fluid">
@@ -67,7 +67,9 @@
 
 <body>
   <div id="mainContainer">
-    <div id="products"></div>
+    <div class="row">
+      <div id="products"></div>
+    </div>
   </div>
   
   <script src="dist/bundle.js"></script>
